--- a/index.html
+++ b/index.html
@@ -1,58 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Condiment&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- Local Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-    <!-- Link to Javascript -->
-    <script type="text/javascript" src="./assets/javascript/game.js"></script>
-
-
-    <title>Ladies of the 80s</title>
-</head>
-
-<body>
-
-    <div class="bg">
-        <div class="game-title col-md-8">
-            <h1 class="display-3">Ladies of the 80s
-                <small class="text-muted">Music Edition</small>
-            </h1>
-            <div class="game-score col-md-4">
-                <h4>Wins</h4>
-                <div id="demo"></div>
+  <body>
+    <div class="background">
+      <div class="row vertical-center">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10">
+          <div class="row">
+            <div class="col-lg-3 bg-transparent text-white title">
+              <h2 class="card-title">Wins</h2>
+              <div class="row">
+                <div class="col"></div>
+                <h1 class="display-4">
+                  <div class="col-lg win-number"></div>
+                </h1>
+                <div class="col"></div>
+              </div>
             </div>
+            <div class="col-lg-6 bg-transparent title">
+              <h1 class="display-4">Ladies of the 80s</h1>
+            </div>
+            <div class="col-lg-3 bg-transparent text-white title ">
+              <h2 class="card-title">Guesses</h2>
+              <div class="row">
+                <div class="col"></div>
+                <h1 class="display-4">
+                  <div class="col-lg loss-number"></div>
+                </h1>
+                <div class="col"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row bg-primary">
+            <div class="col-lg-12 middle-area">
+              <li class="list-group-item active instruction">
+                Press any key to start guessing.
+              </li>
+            </div>
+          </div>
+          <div class="row bg-secondary">
+            <div class="col-lg-12 middle-area">
+              <div class="jumbotron">
+                <div class="row">
+                  <div class="col"></div>
+                  <h1 class="display-4">
+                    <div class="col-lg hangman"></div>
+                  </h1>
+                  <div class="col"></div>
+                </div>
+                <div class="row">
+                  <div class="col"></div>
+                  <h2 class="lead">
+                    <div class="col-lg incorrect-sect">
+                      Incorrect letters:
+                    </div>
+                  </h2>
+                  <div class="col"></div>
+                </div>
+                <div class="row">
+                  <div class="col"></div>
+                  <h1 class="lead">
+                    <div class="col-lg wrongL"></div>
+                  </h1>
+                  <div class="col"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <blockquote class="start-game blockquote col-md-12">
-            <h3 class="mb-0">Press any key to get started</h3>
-        </blockquote>
-
-        <div class="current-guess">
-            <h4>Current Word</h4>
-            <!-- Current word being guessed shows here -->
-        </div>
-
-        <div class="guesses-remaining">
-            <h4>Number of Guesses</h4>
-            <!-- Number of guesses remaining shows here (countdown) -->
-        </div>
-
-        <div class="already-guessed">
-            <h4>Letters already guessed</h4>
-            <!-- Letters already guessed show here -->
-        </div>
+        <div class="col-lg-1"></div>
+      </div>
     </div>
-
-</body>
-
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+  </body>
 </html>
