adjusted femaleArtists array - removed uppercase

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Condiment&display=swap"
+      href="https://fonts.googleapis.com/css?family=Monoton&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -21,7 +21,7 @@
         <div class="col-lg-10">
           <div class="row">
             <div class="col-lg-3 bg-transparent text-white title">
-              <h2 class="card-title">Wins</h2>
+              <h2 class="card-title"># of Wins</h2>
               <div class="row">
                 <div class="col"></div>
                 <h1 class="display-4">
@@ -34,9 +34,9 @@
               <h1 class="display-4">Ladies of the 80s</h1>
             </div>
             <div class="col-lg-3 bg-transparent text-white title ">
-              <h2 class="card-title">Guesses</h2>
+              <h2 class="card-title">Guesses left</h2>
               <div class="row">
-                <div class="col"></div>
+                <div id="guesses-left" class="col"></div>
                 <h1 class="display-4">
                   <div class="col-lg loss-number"></div>
                 </h1>
@@ -57,7 +57,7 @@
                 <div class="row">
                   <div class="col"></div>
                   <h1 class="display-4">
-                    <div class="col-lg hangman"></div>
+                    <div id="word-guess" class="col-lg"></div>
                   </h1>
                   <div class="col"></div>
                 </div>
