--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="row">
                 <div class="col"></div>
                 <h1 class="display-4">
-                  <div class="col-lg win-number"></div>
+                  <div id="win-number" class="col-lg"></div>
                 </h1>
                 <div class="col"></div>
               </div>
@@ -36,7 +36,7 @@
             <div class="col-lg-3 bg-transparent text-white title ">
               <h2 class="card-title">Guesses left</h2>
               <div class="row">
-                <div id="guesses-left" class="col"></div>
+                <div id="guesses-left" class="col display-4"></div>
                 <h1 class="display-4">
                   <div class="col-lg loss-number"></div>
                 </h1>
@@ -57,7 +57,7 @@
                 <div class="row">
                   <div class="col"></div>
                   <h1 class="display-4">
-                    <div id="word-guess" class="col-lg"></div>
+                    <div id="word-guess" class="col-lg hangman"></div>
                   </h1>
                   <div class="col"></div>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="row">
                   <div class="col"></div>
                   <h1 class="lead">
-                    <div class="col-lg wrongL"></div>
+                    <div id="wrong-guesses" class="col-lg wrongL"></div>
                   </h1>
                   <div class="col"></div>
                 </div>
