--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <div class="col-lg-6 bg-transparent title">
               <h1 class="display-4">Ladies of the 80s</h1>
             </div>
-            <div class="col-lg-3 bg-transparent text-white title ">
+            <div class="col-lg-3 bg-transparent text-white title">
               <h2 class="card-title">Guesses left</h2>
               <div class="row">
-                <div id="guesses-left" class="col display-4"></div>
+                <div class="col"></div>
                 <h1 class="display-4">
-                  <div class="col-lg loss-number"></div>
+                  <div id="guesses-left" class="col-lg"></div>
                 </h1>
                 <div class="col"></div>
               </div>
