--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="row bg-primary">
             <div class="col-lg-12 middle-area">
-              <li class="list-group-item active instruction">
+              <li id="user-message" class="list-group-item active instruction">
                 Press any key to start guessing.
               </li>
             </div>
