--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
               </div>
             </div>
             <div class="col-lg-6 bg-transparent title">
-              <h1 class="display-4">Ladies of the 80s</h1>
+              <h1 class="display-4">
+                Ladies of the 80s
+              </h1>
+              <h2><span class="badge badge-secondary">Music Edition</span></h2>
             </div>
             <div class="col-lg-3 bg-transparent text-white title">
               <h2 class="card-title">Guesses left</h2>
