--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <div class="row">
                   <div class="col"></div>
                   <h1 class="display-4">
-                    <div id="word-guess" class="col-lg hangman"></div>
+                    <div class="col-lg hangman">
+                      <p id="word-guess"></p>
+                    </div>
                   </h1>
                   <div class="col"></div>
                 </div>
